feat(UPI-1146): update links on umap mandate, refund-dispute, notfn pages to open on same tab except api ref and notfn ref

--- a/content/payments/umap/mandates/generic.mdx
+++ b/content/payments/umap/mandates/generic.mdx
@@ -11,10 +11,10 @@ updating an agreement between two parties.
 
 There are four main operations that can happen on a UPI mandate after creation:
 <ul>
-    <li>Updating a mandate. Read more <a href="/payments/umap/mandates/generic/update" target="_blank">here</a></li>
-    <li>Revoking a mandate. Read more <a href="/payments/umap/mandates/generic/revoke" target="_blank">here</a></li>
-    <li>Pausing a mandate. Read more <a href="/payments/umap/mandates/generic/pause" target="_blank">here</a></li>
-    <li>Unpausing a paused mandate. Read more <a href="/payments/umap/mandates/generic/unpause" target="_blank">here</a></li>
+    <li>Updating a mandate. Read more <Link href="/payments/umap/mandates/generic/update">here</Link></li>
+    <li>Revoking a mandate. Read more <Link href="/payments/umap/mandates/generic/revoke">here</Link></li>
+    <li>Pausing a mandate. Read more <Link href="/payments/umap/mandates/generic/pause">here</Link></li>
+    <li>Unpausing a paused mandate. Read more <Link href="/payments/umap/mandates/generic/unpause">here</Link></li>
 </ul>
 
 #### Explore our UPI Mandate Products
