--- a/content/payments/umap/mandates/generic/pause.mdx
+++ b/content/payments/umap/mandates/generic/pause.mdx
@@ -37,7 +37,7 @@ visible_in_sidebar: true
   alt="Bridge"
 />
 
-<p>After receiving <b>mandate_operation.pause.initiated</b> notification, the merchant can also use <a href="/payments/umap/mandates/generic/pause#check-mandate-operation-status" target="_blank">check mandate operation status API</a> to check if mandate pause is <b>successful</b></p>
+<p>After receiving <b>mandate_operation.pause.initiated</b> notification, the merchant can also use <Link href="/payments/umap/mandates/generic/pause#check-mandate-operation-status">check mandate operation status API</Link> to check if mandate pause is <b>successful</b></p>
 
 <Callout type="warning">
     The only operation that can be performed on a <code>paused</code> mandate is to <code>unpause</code> it. Other operations like <code>pre debit notification</code>, <code>execution</code>, <code>update</code> and <code>revoke</code> are blocked while a mandate is <code>paused</code>
@@ -75,13 +75,9 @@ After receiving pause operation initiated notification, the merchant can use thi
                 <code>merchantId</code><br/>
                 <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                 Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
+                    href="/payments/umap/api-integration"
                     target="_blank">
                     OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
                 </a>.<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
