--- a/content/payments/umap/mandates/generic/revoke.mdx
+++ b/content/payments/umap/mandates/generic/revoke.mdx
@@ -63,13 +63,9 @@ A mandate can be revoked by a merchant or aggregator via collect flow by calling
                             <code>merchantId</code><br/>
                             <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                             Generate this token using <a
-                                href="/payments/upi-deeplinks/resources/oauth"
+                                href="/payments/umap/api-integration"
                                 target="_blank">
                                 OAuth
-                            </a> or <a
-                                href="/payments/upi-deeplinks/resources/jwt"
-                                target="_blank">
-                                JWT
                             </a>.<br />
                             <br />
                             <code>Content-Type</code>—will be <code>application/json</code>
@@ -110,7 +106,7 @@ A mandate can be revoked by a merchant or aggregator via collect flow by calling
                 <li><b>mandate_operation.revoke.failed</b> (if mandate revoke fails)</li>
             </ul>
             <p>Read more about mandate status notifications <a href="/payments/umap/notifications/mandates">here</a> and mandate revoke operation notifications <a href="/payments/umap/notifications/mandates/revoke">here</a></p>
-            <p>In addition to the notifications, the merchant can also use <a href="/payments/umap/mandates/generic/revoke#check-mandate-operation-status" target="_blank">check mandate operation status API</a> to check if mandate revoke is <b>successful</b></p>
+            <p>In addition to the notifications, the merchant can also use <Link href="/payments/umap/mandates/generic/revoke#check-mandate-operation-status">check mandate operation status API</Link> to check if mandate revoke is <b>successful</b></p>
             {" "}
             <br></br>
             Please refer to the Document Reference section for checking the API reference and the notifications.
@@ -136,7 +132,7 @@ A mandate can be revoked by a merchant or aggregator via collect flow by calling
                 <li><b>mandate_operation.revoke.failed</b> (if mandate revoke fails)</li>
             </ul>
             <p>Read more about mandate status notifications <a href="/payments/umap/notifications/mandates">here</a> and mandate revoke operation notifications <a href="/payments/umap/notifications/mandates/revoke">here</a></p>
-            <p>After receiving <b>mandate_operation.revoke.initiated</b> notification,, the merchant can also use <a href="/payments/umap/mandates/generic/revoke#check-mandate-operation-status" target="_blank">check mandate operation status API</a> to check if mandate revoke is <b>successful</b></p>
+            <p>After receiving <b>mandate_operation.revoke.initiated</b> notification,, the merchant can also use <Link href="/payments/umap/mandates/generic/revoke#check-mandate-operation-status">check mandate operation status API</Link> to check if mandate revoke is <b>successful</b></p>
             {" "}
             <br></br>
             Please refer to the Document Reference section for checking the API reference and the notifications.
@@ -183,13 +179,9 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
                 <code>merchantId</code><br/>
                 <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                 Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
+                    href="/payments/umap/api-integration"
                     target="_blank">
                     OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
                 </a>.<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
