--- a/content/payments/umap/mandates/generic/unpause.mdx
+++ b/content/payments/umap/mandates/generic/unpause.mdx
@@ -35,7 +35,7 @@ Only the end customer has the option of unpausing a paused UPI mandate from thei
   alt="Bridge"
 />
 
-<p>After receiving <b>mandate_operation.unpause.initiated</b> notification, the merchant can also use <a href="/payments/umap/mandates/generic/unpause#check-mandate-operation-status" target="_blank">check mandate operation status API</a> to check if mandate unpause is <b>successful</b></p>
+<p>After receiving <b>mandate_operation.unpause.initiated</b> notification, the merchant can also use <Link href="/payments/umap/mandates/generic/unpause#check-mandate-operation-status">check mandate operation status API</Link> to check if mandate unpause is <b>successful</b></p>
 
 <hr class="tertiary"/>
 
@@ -69,13 +69,9 @@ After receiving pause operation initiated notification, the merchant can use thi
                 <code>merchantId</code><br/>
                 <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                 Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
+                    href="/payments/umap/api-integration"
                     target="_blank">
                     OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
                 </a>.<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
