--- a/content/payments/umap/mandates/generic/update.mdx
+++ b/content/payments/umap/mandates/generic/update.mdx
@@ -67,13 +67,9 @@ There are only two updates possible on a UPI mandate
                             <code>merchantId</code><br/>
                             <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                             Generate this token using <a
-                                href="/payments/upi-deeplinks/resources/oauth"
+                                href="/payments/umap/api-integration"
                                 target="_blank">
                                 OAuth
-                            </a> or <a
-                                href="/payments/upi-deeplinks/resources/jwt"
-                                target="_blank">
-                                JWT
                             </a>.<br />
                             <br />
                             <code>Content-Type</code>—will be <code>application/json</code>
@@ -123,7 +119,7 @@ There are only two updates possible on a UPI mandate
                 <li><b>mandate_operation.update.failed</b> (if mandate update fails)</li>
             </ul>
             <p>Read more about mandate status notifications <a href="/payments/umap/notifications/mandates">here</a> and mandate update operation notifications <a href="/payments/umap/notifications/mandates/update">here</a></p>
-            <p>In addition to the notifications, the merchant can also use <a href="/payments/umap/mandates/generic/update#check-mandate-operation-status" target="_blank">check mandate operation status API</a> to check if mandate update is <b>successful</b></p>
+            <p>In addition to the notifications, the merchant can also use <Link href="/payments/umap/mandates/generic/update#check-mandate-operation-status">check mandate operation status API</Link> to check if mandate update is <b>successful</b></p>
             {" "}
             <br></br>
             Please refer to the Document Reference section for checking the API reference and the notifications.
@@ -169,13 +165,9 @@ There are only two updates possible on a UPI mandate
                             <code>merchantId</code><br/>
                             <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                             Generate this token using <a
-                                href="/payments/upi-deeplinks/resources/oauth"
+                                href="/payments/umap/api-integration"
                                 target="_blank">
                                 OAuth
-                            </a> or <a
-                                href="/payments/upi-deeplinks/resources/jwt"
-                                target="_blank">
-                                JWT
                             </a>.<br />
                             <br />
                             <code>Content-Type</code>—will be <code>application/json</code>
@@ -220,7 +212,7 @@ There are only two updates possible on a UPI mandate
                 <li><b>mandate_operation.update.failed</b> (if mandate update fails)</li>
             </ul>
             <p>Read more about mandate status notifications <a href="/payments/umap/notifications/mandates">here</a> and mandate update operation notifications <a href="/payments/umap/notifications/mandates/update">here</a></p>
-            <p>In addition to the notifications, the merchant can also use <a href="/payments/umap/mandates/generic/update#check-mandate-operation-status" target="_blank">check mandate operation status API</a> to check if mandate update is <b>successful</b></p>
+            <p>In addition to the notifications, the merchant can also use <Link href="/payments/umap/mandates/generic/update#check-mandate-operation-status">check mandate operation status API</Link> to check if mandate update is <b>successful</b></p>
             {" "}
             <br></br>
             Please refer to the Document Reference section for checking the API reference and the notifications.
@@ -262,13 +254,9 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
                 <code>merchantId</code><br/>
                 <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                 Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
+                    href="/payments/umap/api-integration"
                     target="_blank">
                     OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
                 </a>.<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
