--- a/content/payments/umap/mandates/otm/create.mdx
+++ b/content/payments/umap/mandates/otm/create.mdx
@@ -49,13 +49,9 @@ There are 2 ways to create a one time mandate: **Intent based**, **Collect based
                             <code>merchantId</code><br/>
                             <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                             Generate this token using <a
-                                href="/payments/upi-deeplinks/resources/oauth"
+                                href="/payments/umap/api-integration"
                                 target="_blank">
                                 OAuth
-                            </a> or <a
-                                href="/payments/upi-deeplinks/resources/jwt"
-                                target="_blank">
-                                JWT
                             </a>.<br />
                             <br />
                             <code>Content-Type</code>—will be <code>application/json</code>
@@ -183,7 +179,7 @@ There are 2 ways to create a one time mandate: **Intent based**, **Collect based
                 <li><b>mandate_operation.create.failed</b> (if mandate creation fails)</li>
             </ul>
             <p>Read more about mandate status notifications <a href="/payments/umap/notifications/mandates">here</a> and mandate create operation notifications <a href="/payments/umap/notifications/mandates/create">here</a></p>
-            <p>In addition to the notifications, the merchant can also use <a href="/payments/umap/mandates/otm/create#check-mandate-status" target="_blank">check mandate status API</a> to check if mandate is <b>LIVE</b></p>
+            <p>In addition to the notifications, the merchant can also use <Link href="/payments/umap/mandates/otm/create#check-mandate-status">check mandate status API</Link> to check if mandate is <b>LIVE</b></p>
         </Text>
         ),
     },
@@ -224,13 +220,9 @@ There are 2 ways to create a one time mandate: **Intent based**, **Collect based
                             <code>merchantId</code><br/>
                             <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                             Generate this token using <a
-                                href="/payments/upi-deeplinks/resources/oauth"
+                                href="/payments/umap/api-integration"
                                 target="_blank">
                                 OAuth
-                            </a> or <a
-                                href="/payments/upi-deeplinks/resources/jwt"
-                                target="_blank">
-                                JWT
                             </a>.<br />
                             <br />
                             <code>Content-Type</code>—will be <code>application/json</code>
@@ -351,7 +343,7 @@ There are 2 ways to create a one time mandate: **Intent based**, **Collect based
                 <li><b>mandate_operation.create.failed</b> (if mandate creation fails)</li>
             </ul>
             <p>Read more about mandate status notifications <a href="/payments/umap/notifications/mandates">here</a> and mandate create operation notifications <a href="/payments/umap/notifications/mandates/create">here</a></p>
-            <p>In addition to the notifications, the merchant can also use <a href="/payments/umap/mandates/otm/create#check-mandate-status" target="_blank">check mandate status API</a> to check if mandate is <b>LIVE</b></p>
+            <p>In addition to the notifications, the merchant can also use <Link href="/payments/umap/mandates/otm/create#check-mandate-status">check mandate status API</Link> to check if mandate is <b>LIVE</b></p>
             <p>Please refer to the Document Reference section for checking the API reference and the notifications.</p>
         </Text>
       ),
@@ -391,13 +383,9 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
                 <code>merchantId</code><br/>
                 <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                 Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
+                    href="/payments/umap/api-integration"
                     target="_blank">
                     OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
                 </a>.<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
