--- a/content/payments/umap/mandates/otm/execute.mdx
+++ b/content/payments/umap/mandates/otm/execute.mdx
@@ -46,13 +46,9 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
                 <code>merchantId</code><br/>
                 <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                 Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
+                    href="/payments/umap/api-integration"
                     target="_blank">
                     OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
                 </a>.<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
@@ -123,7 +119,7 @@ To know more about all the API params, please refer to the API documentation <a 
 </ul>
 <p>Read more about mandate execute operation notifications <a href="/payments/umap/notifications/mandates/execute">here</a></p>
 
-<p>In addition to the notifications, the merchant can also use <a href="/payments/umap/mandates/otm/execute#check-mandate-execution-status" target="_blank">check mandate execution status API</a> to check if execution is <b>successful</b></p>
+<p>In addition to the notifications, the merchant can also use <Link href="/payments/umap/mandates/otm/execute#check-mandate-execution-status">check mandate execution status API</Link> to check if execution is <b>successful</b></p>
 
 Please refer to the Document Reference section for checking the API reference and the notifications.
 
@@ -159,13 +155,9 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
                 <code>merchantId</code><br/>
                 <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                 Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
+                    href="/payments/umap/api-integration"
                     target="_blank">
                     OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
                 </a>.<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
