--- a/content/payments/umap/mandates/recurring/execute.mdx
+++ b/content/payments/umap/mandates/recurring/execute.mdx
@@ -54,13 +54,9 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
                 <code>merchantId</code><br/>
                 <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                 Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
+                    href="/payments/umap/api-integration"
                     target="_blank">
                     OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
                 </a>.<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
@@ -128,7 +124,7 @@ To know more about all the API params, please refer to the API documentation <a 
 </ul>
 <p>Read more about mandate execute operation notifications <a href="/payments/umap/notifications/mandates/execute">here</a></p>
 
-<p>In addition to the notifications, the merchant can also use <a href="/payments/umap/mandates/recurring/execute#check-mandate-execution-status" target="_blank">check mandate execution status API</a> to check if execution is <b>successful</b></p>
+<p>In addition to the notifications, the merchant can also use <Link href="/payments/umap/mandates/recurring/execute#check-mandate-execution-status">check mandate execution status API</Link> to check if execution is <b>successful</b></p>
 
 <Callout type="highlight">
     If <code>autoExecute</code> and <code>autoPreNotify</code> are set to <code>true</code> while creating a mandate, UMAP will schedule executions and send notifications to the merchant for <code>execution confirmation</code> and <code>mandate status</code> in every recurrence cycle
@@ -168,13 +164,9 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
                 <code>merchantId</code><br/>
                 <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                 Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
+                    href="/payments/umap/api-integration"
                     target="_blank">
                     OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
                 </a>.<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
