--- a/content/payments/umap/mandates/single-block-multi-debit/create.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit/create.mdx
@@ -33,13 +33,9 @@ visible_in_sidebar: true
                 <code>merchantId</code><br/>
                 <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                 Generate this token using <a
-                href="/payments/upi-deeplinks/resources/oauth"
+                href="/payments/umap/api-integration"
                 target="_blank">
                 OAuth
-                </a> or <a
-                href="/payments/upi-deeplinks/resources/jwt"
-                target="_blank">
-                JWT
                 </a>.<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
@@ -185,7 +181,7 @@ visible_in_sidebar: true
     <li><b>mandate_operation.create.failed</b> (if mandate creation fails)</li>
 </ul>
 <p>Read more about mandate status notifications <a href="/payments/umap/notifications/mandates">here</a> and mandate create operation notifications <a href="/payments/umap/notifications/mandates/create">here</a></p>
-<p>In addition to the notifications, the merchant can also use <a href="/payments/umap/mandates/single-block-multi-debit/create#check-mandate-status">check mandate status API</a> to check if mandate is <b>LIVE</b></p>
+<p>In addition to the notifications, the merchant can also use <Link href="/payments/umap/mandates/single-block-multi-debit/create#check-mandate-status">check mandate status API</Link> to check if mandate is <b>LIVE</b></p>
 <p>Please refer to the Document Reference section for checking the API reference and the notifications.</p>
 
 <hr class="tertiary"/>
@@ -228,13 +224,9 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
                 <code>merchantId</code><br/>
                 <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                 Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
+                    href="/payments/umap/api-integration"
                     target="_blank">
                     OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
                 </a>.<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
