--- a/content/payments/umap/notifications.mdx
+++ b/content/payments/umap/notifications.mdx
@@ -10,9 +10,9 @@ visible_in_sidebar: true
 <Card padding="nano" shape="rounded" marginBottom="micro">
     <Text size="medium" marginBottom="none" paddingRight="medium"> 
         <strong>Prerequesites - </strong>
-        <a href="/payments/umap/quickstart">
+        <Link href="/payments/umap/quickstart">
             Quickstart ↗ 
-        </a>
+        </Link>
     </Text>
 </Card>
 
