--- a/content/payments/umap/mandates/otm/pre-debit-notify.mdx
+++ b/content/payments/umap/mandates/otm/pre-debit-notify.mdx
@@ -57,13 +57,9 @@ The merchant will have to call the **<i>send mandate pre debit notification API<
                 <code>merchantId</code><br/>
                 <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                 Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
+                    href="/payments/umap/api-integration"
                     target="_blank">
                     OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
                 </a>.<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
@@ -139,7 +135,7 @@ To know more about all the API params, please refer to the API documentation <a 
 </ul>
 <p>Read more about mandate pre debit notification operation notifications <a href="/payments/umap/notifications/mandates/notify">here</a></p>
 
-<p>In addition to the notifications, the merchant can also use <a href="/payments/umap/mandates/otm/pre-debit-notify#check-mandate-pre-debit-notification-status" target="_blank">check mandate pre debit notification status API</a> to check if pre debit notification is <b>successful</b></p>
+<p>In addition to the notifications, the merchant can also use <Link href="/payments/umap/mandates/otm/pre-debit-notify#check-mandate-pre-debit-notification-status">check mandate pre debit notification status API</Link> to check if pre debit notification is <b>successful</b></p>
 
 Please refer to the Document Reference section for checking the API reference and the notifications.
 
@@ -175,13 +171,9 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
                 <code>merchantId</code><br/>
                 <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                 Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
+                    href="/payments/umap/api-integration"
                     target="_blank">
                     OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
                 </a>.<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
