--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -95,36 +95,40 @@ This API can be called to update the information associated with the merchant li
 
 <Row>
     <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <Text
-                size="small"
-                weight="600"
-                textColor="slate-60"
-                marginBottom="micro"
-            >
-                READ ALSO &rarr;
-            </Text>
-            <p>Payments</p>
-            <a href="/payments/umap/payments">
-                Enable UPI payments with QR, Collect & TPV ->
-            </a>
-        </Card>
+        <Link href="/payments/umap/api-integration/aggregators">
+            <Card padding="micro" shape="rounded">
+                <Text
+                    size="small"
+                    weight="600"
+                    textColor="slate-60"
+                    marginBottom="micro"
+                >
+                    READ ALSO &rarr;
+                </Text>
+                <Text size="large" weight="600" textColor="blue-90">
+                    Payments
+                </Text>
+                <Text weight="400">Enable UPI payments with QR, Collect & TPV</Text>
+            </Card>
+        </Link>
     </Portion>
     <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <Text
-                size="small"
-                weight="600"
-                textColor="slate-60"
-                marginBottom="micro"
-            >
-                READ ALSO &rarr;
-            </Text>
-            <p>Mandates</p>
-            <a href="/payments/umap/mandates">
-                Enable recurring payments with UPI Autopay ->
-            </a>
-        </Card>
+        <Link href="/payments/umap/api-integration/merchants">
+            <Card padding="micro" shape="rounded">
+                <Text
+                    size="small"
+                    weight="600"
+                    textColor="slate-60"
+                    marginBottom="micro"
+                >
+                    READ ALSO &rarr;
+                </Text>
+                <Text size="large" weight="600" textColor="blue-90">
+                    Mandates
+                </Text>
+                <Text weight="400">Enable recurring payments with UPI Autopay</Text>
+            </Card>
+        </Link>
     </Portion>
 </Row>
 
