--- a/content/payments/umap/payments/collect-request/create-collect-request.mdx
+++ b/content/payments/umap/payments/collect-request/create-collect-request.mdx
@@ -74,6 +74,10 @@ This API can be used to create a collect request that initiates a UPI transactio
 }`}
 </CodeBlockWithCopy>
 
+<Element as="ul">
+    <li><code>productConfigId</code> is an optional field.</li>
+</Element>
+
 ###### Sample response
 
 <CodeBlockWithCopy language="json">
