--- a/content/payments/umap/payments/intent-qr/create-payment-link.mdx
+++ b/content/payments/umap/payments/intent-qr/create-payment-link.mdx
@@ -82,13 +82,14 @@ visible_in_sidebar: true
   "transactionNote": "testpay"
 }`}
           </CodeBlockWithCopy>
-          <Callout type="note">
-            <strong>amount</strong> is a mandatory field
-          </Callout>
-          <br/>
-          <p>By creating a payment link with paymentType as <code>pay_single</code>
+        <Element as="ul">
+        <li><code>amount</code> is a mandatory field.</li>
+        <li><code>productConfigId</code> is an optional field.</li>
+        </Element>
+        <Callout type="note">
+            By creating a payment link with paymentType as <code>pay_single</code>
             you can accept the payment only once.
-          </p>
+        </Callout>
         </>
       ),
     },
@@ -111,13 +112,14 @@ visible_in_sidebar: true
   "transactionNote": "testpay"
 }`}
           </CodeBlockWithCopy>
-         <Callout type="note">
-            <strong>amount</strong> is not required when creating multi use payment link
-          </Callout>
-          <br/>
-          <p>By creating a payment link with paymentType as <code>pay_multi</code>
+          <Element as="ul">
+            <li><code>amount</code> is an optional field.</li>
+            <li><code>productConfigId</code> is an optional field.</li>
+        </Element>
+        <Callout type="note">
+            By creating a payment link with paymentType as <code>pay_multi</code>
             you can accept the payment more than once.
-          </p>
+        </Callout>
         </>
       ),
     }
