--- a/content/payments/umap/payments/tpv/create-tpv.mdx
+++ b/content/payments/umap/payments/tpv/create-tpv.mdx
@@ -93,6 +93,10 @@ The merchant generates a payment link. This unique link serves as the gateway fo
 }`}
 </CodeBlockWithCopy>
 
+<Element as="ul">
+    <li><code>productConfigId</code> is an optional field.</li>
+</Element>
+
 ###### Sample response
 
 <CodeBlockWithCopy language="json">
