--- a/content/payments/umap/quickstart/merchants.mdx
+++ b/content/payments/umap/quickstart/merchants.mdx
@@ -34,18 +34,15 @@ Merchants can integrate with UMAP by directly registering themselves on Setu's b
 
 ##### Step 2 - Get API credentials
 
-`TODO: Write about how to get api credentials`
+Contact Setu on <a href="">umap@setu.co</a> to get `x-client-id` and `x-client-secret` details. These credentials are required to make API calls on sandbox or production.
 
 <hr class="primary" />
 
-##### Step 3. Authorization and access
-
-`TODO: You can use the API credentials from Bridge to test UMAP on sandbox`
-
 <NextPage
     info={{
-        description: "Get started with configuring UPI products",
-        slug: "/payments/umap/api-integration/merchants",
+        description:
+            "Get started with configuring UPI products",
+        slug: "/payments/umap/api-integration",
         title: "API Integration",
     }}
 />
