--- a/content/payments/umap/quickstart/aggregators.mdx
+++ b/content/payments/umap/quickstart/aggregators.mdx
@@ -45,15 +45,10 @@ Contact Setu on <a href="">umap@setu.co</a> to get `x-client-id` and `x-client-s
 
 <hr class="primary" />
 
-#### Step 3 — Authorization and access
-
-You can use the API credentials provided by Setu to test UMAP on sandbox
-
-`TODO: add login API`
-
 <NextPage
     info={{
-        description: "Get started with integrating UPI on your platform",
+        description:
+            "Get started with integrating UPI on your platform",
         slug: "/payments/umap/api-integration",
         title: "API Integration",
     }}
